consolidate createPrunedColumnsMetadata and ParquetMetadata#buildBlocks